@@ -36,7 +36,6 @@ body {
 	-ms-user-drag: none;
 	-moz-user-drag: none;
 	user-drag: none;
-	cursor: pointer;
 	-webkit-tap-highlight-color:rgba(0,0,0,0);
 	-o-tap-highlight-color:rgba(0,0,0,0);
 	-ms-tap-highlight-color:rgba(0,0,0,0);
@@ -205,7 +204,6 @@ CONSOLE UNIT
 	*display: inline;
 	zoom: 1;
 */
-	cursor: pointer;
 }
 
 #consoleUnit.portrait {
@@ -266,8 +264,8 @@ CONSOLE UNIT
 }
 
 #consoleDisplay {
-	cursor: pointer;
 	border: none;
+	cursor: pointer;
 }
 
 .framed #consoleDisplayWrapper {
@@ -333,12 +331,19 @@ img, button {
 	-webkit-user-drag: none;
 }
 
+.absolutePanelComponent , .gridPanelComponent{
+	cursor: auto;
+}
+
 .consoleWidget, .consoleWidget * {
 	-webkit-box-sizing: border-box;
 	-o-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	-ms-box-sizing: border-box;
 	box-sizing: border-box;
+}
+
+.interactiveComponent {
 	cursor: pointer;
 }
 
